--- a/ProgrammaticPrompting1.ipynb
+++ b/ProgrammaticPrompting1.ipynb
@@ -121,6 +121,381 @@
         "response = generate_response(messages)\n",
         "print(response)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from litellm import completion\n",
+        "from typing import List, Dict\n",
+        "\n",
+        "\n",
+        "def generate_response(messages: List[Dict]) -> str:\n",
+        "    \"\"\"Call LLM to get response\"\"\"\n",
+        "    response = completion(\n",
+        "        model=\"openai/gpt-4o-mini\",\n",
+        "        messages=messages,\n",
+        "        max_tokens=1024\n",
+        "    )\n",
+        "    return response.choices[0].message.content\n",
+        "\n",
+        "what_to_help_with = input(\"What can I help you with?\")\n",
+        "messages = [\n",
+        "    {\"role\": \"system\",  \"content\": \"You are an expert Python developer. You will provide python function as per the request by user\"},\n",
+        "    {\"role\": \"user\", \"content\": what_to_help_with},\n",
+        "            ]\n",
+        "response = generate_response(messages)\n",
+        "print(response)\n",
+        "\n",
+        "messages = [\n",
+        "    {\"role\": \"system\",  \"content\": \"You are an expert Python developer. You will provide python function as per the request by user\"},\n",
+        "    {\"role\": \"assistant\", \"content\": response},\n",
+        "    {\"role\": \"user\", \"content\": \"Add comprehensive documentation to include 'Function description', 'Parameter description', 'return value description', 'Example usage' and 'Edge Cases'.\"}\n",
+        "            ]\n",
+        "response1 = generate_response(messages)\n",
+        "print(response1)\n",
+        "messages = [\n",
+        "     {\"role\": \"system\",  \"content\": \"You are an expert Python developer. You will provide python function as per the request by user\"},\n",
+        "    {\"role\": \"assistant\", \"content\": response},\n",
+        "    {\"role\": \"user\", \"content\": \"Create unit tests using Python's unittest framework. It should cover basic functionality, edge cases, error cases and various input scenarios\"}\n",
+        "            ]\n",
+        "response2 = generate_response(messages)\n",
+        "print(response2)\n"
+      ],
+      "metadata": {
+        "id": "UlpeJbxvCz6f",
+        "outputId": "a73c15fc-9e16-44a5-b11f-24f3b10f281f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What can I help you with?BST\n",
+            "A Binary Search Tree (BST) is a tree data structure where each node has at most two children, referred to as the left child and the right child. For each node, the left child's value is less than the parent's value, and the right child's value is greater than the parent's value. This property makes it efficient for searching, inserting, and deleting nodes.\n",
+            "\n",
+            "Here’s a simple implementation of a Binary Search Tree in Python, including methods for inserting a node, searching for a value, and performing an in-order traversal:\n",
+            "\n",
+            "```python\n",
+            "class TreeNode:\n",
+            "    def __init__(self, key):\n",
+            "        self.left = None\n",
+            "        self.right = None\n",
+            "        self.val = key\n",
+            "\n",
+            "class BST:\n",
+            "    def __init__(self):\n",
+            "        self.root = None\n",
+            "\n",
+            "    def insert(self, key):\n",
+            "        if self.root is None:\n",
+            "            self.root = TreeNode(key)\n",
+            "        else:\n",
+            "            self._insert_recursive(self.root, key)\n",
+            "\n",
+            "    def _insert_recursive(self, node, key):\n",
+            "        if key < node.val:\n",
+            "            if node.left is None:\n",
+            "                node.left = TreeNode(key)\n",
+            "            else:\n",
+            "                self._insert_recursive(node.left, key)\n",
+            "        else:\n",
+            "            if node.right is None:\n",
+            "                node.right = TreeNode(key)\n",
+            "            else:\n",
+            "                self._insert_recursive(node.right, key)\n",
+            "\n",
+            "    def search(self, key):\n",
+            "        return self._search_recursive(self.root, key)\n",
+            "\n",
+            "    def _search_recursive(self, node, key):\n",
+            "        if node is None or node.val == key:\n",
+            "            return node\n",
+            "        if key < node.val:\n",
+            "            return self._search_recursive(node.left, key)\n",
+            "        return self._search_recursive(node.right, key)\n",
+            "\n",
+            "    def inorder_traversal(self):\n",
+            "        return self._inorder_helper(self.root)\n",
+            "\n",
+            "    def _inorder_helper(self, node):\n",
+            "        return self._inorder_helper(node.left) + [node.val] + self._inorder_helper(node.right) if node else []\n",
+            "\n",
+            "# Example usage:\n",
+            "if __name__ == \"__main__\":\n",
+            "    bst = BST()\n",
+            "    bst.insert(10)\n",
+            "    bst.insert(5)\n",
+            "    bst.insert(15)\n",
+            "    bst.insert(3)\n",
+            "    bst.insert(7)\n",
+            "\n",
+            "    print(f\"In-order Traversal: {bst.inorder_traversal()}\")\n",
+            "    found_node = bst.search(7)\n",
+            "    print(f\"Search for 7: {'Found' if found_node else 'Not Found'}\")\n",
+            "```\n",
+            "\n",
+            "### Features of the Implementation:\n",
+            "1. **TreeNode Class**: Represents each node in the BST, storing its value and references to left and right children.\n",
+            "2. **BST Class**: \n",
+            "   - Contains methods for inserting nodes, searching for values, and performing an in-order traversal.\n",
+            "   - `insert(key)`: Adds a key to the tree while maintaining the BST property.\n",
+            "   - `search(key)`: Searches for a key in the tree and returns the corresponding node if found.\n",
+            "   - `inorder_traversal()`: Returns a list of values in the tree in sorted order.\n",
+            "\n",
+            "You can test this implementation by inserting values and searching for them, as shown in the example usage. Let me know if you have any specific requests or additional functionalities you'd like to see!\n",
+            "Certainly! Below is the comprehensive documentation added to the previous Binary Search Tree (BST) implementation, detailing each function with descriptions, parameters, return values, example usage, and edge cases.\n",
+            "\n",
+            "```python\n",
+            "class TreeNode:\n",
+            "    def __init__(self, key):\n",
+            "        \"\"\"\n",
+            "        Initialize a TreeNode with a given key.\n",
+            "\n",
+            "        Parameters:\n",
+            "        key : Any\n",
+            "            The value to be stored in the node.\n",
+            "        \"\"\"\n",
+            "        self.left = None\n",
+            "        self.right = None\n",
+            "        self.val = key\n",
+            "\n",
+            "\n",
+            "class BST:\n",
+            "    def __init__(self):\n",
+            "        \"\"\"\n",
+            "        Initialize an empty Binary Search Tree (BST).\n",
+            "        \"\"\"\n",
+            "        self.root = None\n",
+            "\n",
+            "    def insert(self, key):\n",
+            "        \"\"\"\n",
+            "        Insert a new key into the BST.\n",
+            "\n",
+            "        Parameters:\n",
+            "        key : Any\n",
+            "            The value to be inserted into the BST.\n",
+            "        \n",
+            "        Return Value:\n",
+            "        None\n",
+            "        \"\"\"\n",
+            "        if self.root is None:\n",
+            "            self.root = TreeNode(key)\n",
+            "        else:\n",
+            "            self._insert_recursive(self.root, key)\n",
+            "\n",
+            "    def _insert_recursive(self, node, key):\n",
+            "        \"\"\"\n",
+            "        Helper method to insert a key recursively.\n",
+            "\n",
+            "        Parameters:\n",
+            "        node : TreeNode\n",
+            "            The current node in the tree.\n",
+            "        key : Any\n",
+            "            The value to be inserted.\n",
+            "        \n",
+            "        Return Value:\n",
+            "        None\n",
+            "        \"\"\"\n",
+            "        if key < node.val:\n",
+            "            if node.left is None:\n",
+            "                node.left = TreeNode(key)\n",
+            "            else:\n",
+            "                self._insert_recursive(node.left, key)\n",
+            "        else:\n",
+            "            if node.right is None:\n",
+            "                node.right = TreeNode(key)\n",
+            "            else:\n",
+            "                self._insert_recursive(node.right, key)\n",
+            "\n",
+            "    def search(self, key):\n",
+            "        \"\"\"\n",
+            "        Search for a key in the BST.\n",
+            "\n",
+            "        Parameters:\n",
+            "        key : Any\n",
+            "            The value to search for in the BST.\n",
+            "        \n",
+            "        Return Value:\n",
+            "        TreeNode or None\n",
+            "            Returns the TreeNode if the key is found; otherwise, returns None.\n",
+            "        \"\"\"\n",
+            "        return self._search_recursive(self.root, key)\n",
+            "\n",
+            "    def _search_recursive(self, node, key):\n",
+            "        \"\"\"\n",
+            "        Helper method to search for a key recursively.\n",
+            "\n",
+            "        Parameters:\n",
+            "        node : TreeNode\n",
+            "            The current node in the tree.\n",
+            "        key : Any\n",
+            "            The value to search for.\n",
+            "        \n",
+            "        Return Value:\n",
+            "        TreeNode or None\n",
+            "            Returns the TreeNode if found; otherwise, None.\n",
+            "        \"\"\"\n",
+            "        if node is None or node.val == key:\n",
+            "            return node\n",
+            "        if key < node.val:\n",
+            "            return self._search_recursive(node.left, key)\n",
+            "        return self._search_recursive(node.right, key)\n",
+            "\n",
+            "    def inorder_traversal(self):\n",
+            "        \"\"\"\n",
+            "        Perform an in-order traversal of the BST.\n",
+            "\n",
+            "        Return Value:\n",
+            "        List[Any]\n",
+            "            Returns a list of values in sorted order from the BST.\n",
+            "        \"\"\"\n",
+            "        return self._inorder_helper(self.root)\n",
+            "\n",
+            "    def _inorder_helper(self, node):\n",
+            "        \"\"\"\n",
+            "        Helper method to perform in-order traversal recursively.\n",
+            "\n",
+            "        Parameters:\n",
+            "        node : TreeNode\n",
+            "            The current node in the tree.\n",
+            "        \n",
+            "        Return Value:\n",
+            "        List[Any]\n",
+            "            Returns a list of values from the subtree rooted at 'node'.\n",
+            "        \"\"\"\n",
+            "        return self._inorder_helper(node.left) + [node.val] + self._inorder_helper(node.right) if node else []\n",
+            "\n",
+            "\n",
+            "# Example usage:\n",
+            "if __name__ == \"__main__\":\n",
+            "    # Create a new Binary Search Tree\n",
+            "    bst = BST()\n",
+            "    \n",
+            "    # Insert values into the BST\n",
+            "    bst.insert(10)\n",
+            "    bst.insert(5)\n",
+            "    bst.insert(15)\n",
+            "    bst.insert(3)\n",
+            "    bst.insert(7)\n",
+            "    \n",
+            "    # Perform in-order traversal to get sorted values\n",
+            "    print(f\"In-order Traversal: {bst.inorder_traversal()}\") # Output: [3, 5, 7, 10, 15]\n",
+            "    \n",
+            "    # Search for a value in the BST\n",
+            "    found_node = bst.search(7)\n",
+            "    print(f\"Search for 7: {'Found' if found_node else 'Not Found'}\")  # Output: Found\n",
+            "\n",
+            "    # Search for a non-existent value\n",
+            "    not_found_node = bst.search(99)\n",
+            "    print(f\"Search for 99: {'Found' if not_found_node else 'Not Found'}\")  # Output: Not Found\n",
+            "\n",
+            "# Edge Cases:\n",
+            "# 1. Searching for a value in an empty BST (should return None).\n",
+            "# 2. Inserting duplicates (if allowed, mechanism can be added to handle duplicates).\n",
+            "# 3. Performing in-order traversal on an empty BST (should return an empty list).\n",
+            "# 4. Inserting a sequence of sorted values (to observe tree balance).\n",
+            "```\n",
+            "\n",
+            "### Comprehensive Documentation Breakdown:\n",
+            "\n",
+            "1. **Function Description**: Each method in the classes has a brief description of its purpose and functionality.\n",
+            "2. **Parameter Description**: Each function also contains details about the parameters it takes, including their types and purpose.\n",
+            "3. **Return Value Description**: Each method indicates\n",
+            "Certainly! Below are unit tests for the Binary Search Tree (BST) implementation using Python's `unittest` framework. The tests cover basic functionality (insertion, search, in-order traversal), edge cases (e.g., operations on an empty tree), and error cases (e.g., searching for absent nodes).\n",
+            "\n",
+            "### Unit Tests Using `unittest`\n",
+            "\n",
+            "```python\n",
+            "import unittest\n",
+            "\n",
+            "# Assume the BST and TreeNode classes have been defined above or imported.\n",
+            "\n",
+            "class TestBinarySearchTree(unittest.TestCase):\n",
+            "    def setUp(self):\n",
+            "        self.bst = BST()\n",
+            "\n",
+            "    def test_insert_and_inorder_traversal(self):\n",
+            "        self.bst.insert(10)\n",
+            "        self.bst.insert(5)\n",
+            "        self.bst.insert(15)\n",
+            "        \n",
+            "        # In-order traversal should return sorted order\n",
+            "        self.assertEqual(self.bst.inorder_traversal(), [5, 10, 15])\n",
+            "\n",
+            "    def test_insert_duplicates(self):\n",
+            "        self.bst.insert(10)\n",
+            "        self.bst.insert(10)  # Duplicate insertion\n",
+            "        \n",
+            "        # In-order traversal should still return unique values since we don't handle duplicates\n",
+            "        self.assertEqual(self.bst.inorder_traversal(), [10])\n",
+            "\n",
+            "    def test_search_existing_node(self):\n",
+            "        self.bst.insert(10)\n",
+            "        self.bst.insert(5)\n",
+            "        self.bst.insert(15)\n",
+            "\n",
+            "        found_node = self.bst.search(15)\n",
+            "        self.assertIsNotNone(found_node)\n",
+            "        self.assertEqual(found_node.val, 15)\n",
+            "\n",
+            "    def test_search_non_existing_node(self):\n",
+            "        self.bst.insert(10)\n",
+            "        self.bst.insert(5)\n",
+            "        \n",
+            "        found_node = self.bst.search(7)  # Searching for a non-existing node\n",
+            "        self.assertIsNone(found_node)\n",
+            "\n",
+            "    def test_search_in_empty_tree(self):\n",
+            "        found_node = self.bst.search(5)  # Searching in an empty tree\n",
+            "        self.assertIsNone(found_node)\n",
+            "\n",
+            "    def test_inorder_traversal_empty_tree(self):\n",
+            "        # In-order traversal of an empty tree should return an empty list\n",
+            "        self.assertEqual(self.bst.inorder_traversal(), [])\n",
+            "    \n",
+            "    def test_inorder_traversal_single_node(self):\n",
+            "        self.bst.insert(10)\n",
+            "        # In-order traversal should return the single node\n",
+            "        self.assertEqual(self.bst.inorder_traversal(), [10])\n",
+            "\n",
+            "    def test_mixed_insert_and_inorder_traversal(self):\n",
+            "        self.bst.insert(10)\n",
+            "        self.bst.insert(5)\n",
+            "        self.bst.insert(15)\n",
+            "        self.bst.insert(3)\n",
+            "        self.bst.insert(7)\n",
+            "        self.bst.insert(12)\n",
+            "        self.bst.insert(17)\n",
+            "\n",
+            "        # Testing the in-order traversal for mixed values\n",
+            "        self.assertEqual(self.bst.inorder_traversal(), [3, 5, 7, 10, 12, 15, 17])\n",
+            "\n",
+            "if __name__ == '__main__':\n",
+            "    unittest.main()\n",
+            "```\n",
+            "\n",
+            "### Key Points Covered in the Tests:\n",
+            "1. **Setup Method**: Initializes a new BST before each test.\n",
+            "2. **Basic Functionality**: Tests for insertion followed by in-order traversal to check if values are stored correctly.\n",
+            "3. **Handling Duplicates**: Tests what happens when duplicates are inserted (expecting unique values in traversal).\n",
+            "4. **Search Operations**: Both searching for existing and non-existing values, including searches in an empty tree.\n",
+            "5. **Edge Cases**: Checking in-order traversal of an empty tree and a tree with a single node.\n",
+            "6. **Mixed Inserts**: A test case that inserts a mix of numbers to verify the overall structure of the BST.\n",
+            "\n",
+            "### Running the Tests:\n",
+            "To execute the tests, save the test code in a Python file and run it using:\n",
+            "```bash\n",
+            "python -m unittest <name_of_the_file>.py\n",
+            "```\n",
+            "\n",
+            "This will run all the defined test cases. Let me know if you need any modifications or additional tests!\n"
+          ]
+        }
+      ]
     }
   ]
 }
